--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.5.1",
     "@mantine/hooks": "^7.5.1",
+    "@netlify/plugin-nextjs": "^4.41.3",
     "@project-serum/anchor": "^0.26.0",
     "@solana/spl-token": "^0.4.0",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
